@@ -75,11 +75,4 @@ void SmartAllocatorImpl::Iterator::next() {
 }
 
 ///////////////////////////////////////////////////////////////////////////////
-// ObjectAllocator classes
-
-ObjectAllocatorBase::ObjectAllocatorBase(int itemSize)
-    : SmartAllocatorImpl(&typeid(ObjectData), itemSize) {
-}
-
-///////////////////////////////////////////////////////////////////////////////
 }
