@@ -38,7 +38,12 @@ class c_Continuation : public ExtObjectDataFlags<ObjectData::HasClone> {
   virtual void sweep();
   void operator delete(void* p) {
     c_Continuation* this_ = (c_Continuation*)p;
-    DELETEOBJSZ(this_->getObjectSize())(this_);
+    auto const size = this_->getObjectSize();
+    if (LIKELY(size <= MemoryManager::kMaxSmartSize)) {
+      MM().smartFreeSize(this_, size);
+      return;
+    }
+    MM().smartFreeSizeBig(this_, size);
   }
 
   explicit c_Continuation(Class* cls = c_Continuation::s_cls);
@@ -88,8 +93,7 @@ public:
 
     size_t arOffset = getArOffset(genFunc);
     size_t objectSize = arOffset + sizeof(ActRec);
-    c_Continuation* cont = (c_Continuation*)ALLOCOBJSZ(objectSize);
-    new ((void *)cont) c_Continuation();
+    auto const cont = new (MM().objMalloc(objectSize)) c_Continuation();
     cont->m_origFunc = const_cast<Func*>(origFunc);
     cont->m_arPtr = (ActRec*)(uintptr_t(cont) + arOffset);
     memset((void*)((uintptr_t)cont + sizeof(c_Continuation)), 0,
