@@ -1,6 +1,7 @@
 future
   - Optimize closure invocation and __invoke (~3x faster to invoke)
   - Import gettext extension
+  - string and object allocation optimizations (reduced memory usage for both)
 
 "Kimchi" 2-Sep-2013
   - Fix order of custom attributes and visibility in  ctor arg promotion
